make the update and delete file
