# controllers/dishes.js
@@ -1,4 +1,4 @@
-const Dish = require("../models/Dishes");
+const Dish = require('../models/Dishes');
 
 const create = async (req, res) => {
   try {
@@ -22,13 +22,44 @@ const getAll = async (req, res) => {
   }
 };
 
-const createIngradient = async (req, res) => {
+const update = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const updates = req.body;
+
+    const dish = await Dish.findByIdAndUpdate(id, updates, { new: true });
+    if (!dish) {
+      return res.status(404).json({ error: "Dish not found" });
+    }
+
+    res.json(dish);
+  } catch (err) {
+    res.status(500).json({ error: err.message });
+  }
+};
+
+const remove = async (req, res) => {
+  try {
+    const { id } = req.params;
+
+    const dish = await Dish.findByIdAndDelete(id);
+    if (!dish) {
+      return res.status(404).json({ error: "Dish not found" });
+    }
+
+    res.json({ message: "Dish deleted successfully" });
+  } catch (err) {
+    res.status(500).json({ error: err.message });
+  }
+};
+
+const createIngredient = async (req, res) => {
   try {
     const dish = await Dish.findOne({ _id: req.params.dishId });
     if (!dish) return res.status(404).send("Dish not found");
 
     const ingredientData = {
-      ingredient: req.body.ingredient, 
+      ingredient: req.body.ingredient,
       amount: req.body.amount,
     };
     dish.ingredients.push(ingredientData);
@@ -52,9 +83,41 @@ const createCategory = async (req, res) => {
   }
 };
 
+const removeCategory = async (req, res) => {
+  try {
+    const dish = await Dish.findOne({ _id: req.params.dishId });
+    if (!dish) return res.status(404).send("Dish not found");
+
+    dish.category = null; 
+    await dish.save();
+    res.status(200).send("Category removed from dish");
+  } catch (err) {
+    res.status(400).json({ error: err.message });
+  }
+};
+
+const removeIngredient = async (req, res) => {
+  try {
+    const dish = await Dish.findOne({ _id: req.params.dishId });
+    if (!dish) return res.status(404).send("Dish not found");
+
+    dish.ingredients = dish.ingredients.filter(
+      (ingredient) => ingredient._id.toString() !== req.params.ingredientId 
+    );
+    await dish.save();
+    res.status(200).send("Ingredient removed from dish");
+  } catch (err) {
+    res.status(400).json({ error: err.message });
+  }
+};
+
 module.exports = {
   create,
   getAll,
-  createIngradient,
+  update,
+  remove,
+  createIngredient,
   createCategory,
+  removeCategory,
+  removeIngredient,
 };
